examples/bad/no_main.latf
int not_main() {
    return 0;
}
// error